# TycheEngine

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  TODOS.md  check_status.py  ctp_gateway_review.json  main.py  message_baseline.cpp  message_baseline.h  message_current.cpp  pyproject.toml  requirements.txt  run_query_ag.py  start-tyche.ps1  static_data_config.json  test_static_data.py  upload-wiki.sh
.claude/agents/: architect.md  code-reviewer.md  implementer.md  plan-reviewer.md  team-lead.md
.claude/memory/: MEMORY.md  agent_team_structure.md  binance-derivatives-skill.md  openctp-skill.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md  cpp_coverage_plan.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: core-config.json  engine.toml  launcher-config.json
config/modules/: bus.toml  example_strategy.toml  momentum-config.json  nexus.toml
docker/: clickhouse-compose.yml
docs/: MODULES.md  dynamic_module_loading_system.md
docs/design/: core_engine_design_v1.md  core_engine_design_v2.md  core_engine_design_v3.md  ctp_gateway_cpp_improvement_v1.md  pure_python_architecture_design_v1.md  repl_client_design_v1.md  tyche_engine_design_v1.md  tyche_engine_design_v2.md  unified_queue_design_v1.md
docs/designs/: core-engine-expansions.md
docs/impl/: core_engine_expansion_implement_v1.md  core_engine_expansion_task16_implement_v1.md  core_engine_implement_v1.md  core_engine_implement_v2.md  cpp_build_guide.md  ctp_gateway_cpp_audit_2025-05-30.md  ctp_gateway_cpp_improvement_implement_v1.md  ctp_gateway_cpp_latency_optimization.md  module_interface_refactor_implement_v1.md  module_interface_refactor_implement_v2.md  openctp_gateway_implement_v1.md  pure_python_implement_v1.md  tyche_engine_implement_v2.md
docs/plan/: core_engine_expansion_plan_v1.md  core_engine_plan_v1.md  (+13 more)
examples/: greeks_pipeline_config.json  query_ag_example.py  run_ctp_gateway.py  run_engine.py  run_gateway.py  run_module.py  run_strategy.py  run_trading_services.py  run_trading_system.py
src/tyche/cpp/: CMakeLists.txt  flat_message.h  flat_serializer.h  message.cpp  message.h  module.cpp  module.h  string_intern.h  types.h
src/tyche/cpp/engine/: adaptive_spin.h  dead_letter_store.cpp  dead_letter_store.h  dynamic_library.cpp  dynamic_library.h  engine.cpp  engine.h  fast_clock.cpp  fast_clock.h  heartbeat_manager.cpp  heartbeat_manager.h  main.cpp  module_interface.h  object_pool.h  rcu_snapshot.h  ring_buffer.h  sharded_topic_map.cpp  sharded_topic_map.h  shared_memory_bridge.cpp  shared_memory_bridge.h  shared_memory_queue.cpp  shared_memory_queue.h  thread_affinity.cpp  thread_affinity.h  topic_queue.cpp  topic_queue.h  topic_queue_index.h
strategies/: momentum.py
tests/: CMakeLists.txt  conftest.py  test_admin_handlers.py  test_availability.py  test_backpressure.py  test_dead_letter.py  test_job_timeout.py  test_retry.py  test_static_data.py
tests/cpp/: CMakeLists.txt  test_adaptive_spin.cpp  test_config.cpp  test_ctp_loader.cpp  test_ctp_loader_integration.cpp  test_dead_letter_store.cpp  test_dynamic_library.cpp  test_engine.cpp  test_engine_integration.cpp  test_fast_clock.cpp  test_flat_message.cpp  test_heartbeat_manager.cpp  test_md_spi.cpp  test_message.cpp  test_object_pool.cpp  test_quote_validator.cpp  test_rcu_snapshot.cpp  test_ring_buffer.cpp  test_sharded_topic_map.cpp  test_shared_memory_bridge.cpp  test_shared_memory_queue.cpp  test_shm_wire_format.cpp  test_string_intern.cpp  test_td_spi.cpp  test_thread_affinity.cpp  test_topic_queue.cpp  test_topic_queue_index.cpp  test_types.cpp
tests/cpp/stubs/stub_ctp_dll/: CMakeLists.txt  stub_ctp_dll.cpp
tests/cpp/stubs/stub_shm_lib/: CMakeLists.txt  stub_shm_lib.cpp
tests/integration/: test_backtest_replay.py  test_bus_pubsub.py  test_clickhouse_backend.py  test_engine_module.py  test_event_chaining.py  test_handle_response.py  test_job_pattern.py  test_launcher.py  test_message_queue_perf.py  test_module_e2e.py  test_multiprocess.py  test_nexus_lifecycle.py  test_nexus_registration.py  test_trading_pipeline.py
tests/perf/: alloc_bench.cpp  ctp_dispatch_bench.cpp  e2e_latency_bench.cpp  flat_message_bench.cpp  ring_buffer_bench.cpp  serialization_bench.cpp  shm_bridge_bench.cpp  topic_queue_bench.cpp
tests/unit/: test_backend.py  test_bindings.py  test_bus.py  test_cli_scaffold.py  test_clickhouse_backend.py  test_clickhouse_backend_unit.py  test_clock.py  test_config.py  test_core_config.py  test_core_protocol.py  test_cpp_example_module.py  test_ctp_config.py  test_ctp_gateway.py  test_ctp_gateway_enhanced.py  test_ctp_state_machine.py  test_data_recorder.py  test_dead_letter_extra.py  test_dispatch_latency.py  test_engine.py  test_engine_main.py  test_engine_threading.py  test_example_module.py  test_gateway_main.py  test_greeks_engine.py  test_heartbeat.py  test_heartbeat_protocol.py  test_jsonl_backend.py  test_latency_stats.py  test_launcher.py  test_message.py  test_message_trace_context.py  test_module.py  test_module_base.py  test_module_clock.py  test_module_main.py  test_module_threading.py  test_monitor.py  test_nexus.py  test_oms_module.py  test_order_store.py  (+14 more)
tui/: README.md  package-lock.json  package.json  tsconfig.json  tyche-processes.json
tyche/: __main__.py
tyche-client/: pyproject.toml
tyche-client/tyche_client/: __init__.py  module.py  protocol.py  serialization.py  transport.py  types.py
tyche-core/: Cargo.toml  pyproject.toml
tyche-core/src/: clock.rs  enums.rs  ffi_bridge.rs  instrument.rs  lib.rs  python.rs  serialization.rs  types.rs
tyche-core/tyche_core/: __init__.py  __main__.py  bus.py  config.py  nexus.py  protocol.py
tyche-launcher/: pyproject.toml
tyche-launcher/tyche_launcher/: __init__.py  __main__.py  config.py  launcher.py  monitor.py
(+187 files in other folders)
