[project]
name = "tyche-launcher"
version = "1.0.0"
description = "TycheEngine module lifecycle manager"
requires-python = ">=3.11"
dependencies = [
    "pyzmq>=25.0",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
tyche-launcher = "tyche_launcher.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
